<?xml version="1.0"?>
<package>
  <name>gazebo_robotino_ros_pkg</name>
  <version>0.0.0</version>
  <description>
	The gazebo_robotino_ros_pkg package
	Convert gazebo topics to ros topics et vice versa
  </description>

  <maintainer email="valentin.vergez@gmail.com">Valentin Vergez</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>trait_im_msg</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
